--- a/W8D1/UIPractice/index.html
+++ b/W8D1/UIPractice/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body class="index-body">
 
 
 <nav class="nav">
@@ -42,46 +42,47 @@
 </form>
 
 </div>
-
-Lists
+<div class="list-container">
+<h1>Lists</h1>
 
 	Shopping List
 	Places I want to Visit Someday
 	Workout Plan
 	Favorite Quotes
+<h1>Shopping List</h1>
+<ul>
 
-Shopping List
+	<li>Fish : NOT COMPLETE</li>
+	<li>Toys : NOT COMPLETE</li>
+	<li>Rocks : COMPLETE</li>
+	<li>Boxes : NOT COMPLETE</li>
+	<li>Tesla Model 3 : NOT COMPLETE</li>
+</ul>
+<h1>Places I want to Visit Someday</h1>
+<ul>
+	<li>Egypt : NOT COMPLETE</li>
+	<li>New Zealand : COMPLETE</li>
+	<li>Sumatra : COMPLETE</li>
+	<li>The Moon : NOT COMPLETE</li>
+</ul>
+<h1>Workout Plan</h1>
+<ul>
+	<li>800 Arm-Curls : COMPLETE</li>
+	<li>Contortion : COMPLETE</li>
+	<li>Dunk a Basketball on a Regulation Hoop : NOT COMPLETE</li>
+	<li>100 Meter Swim : COMPLETE</li>
+</ul>
+<h1>Favorite Quotes</h1>
+<ul>
+	<li>"When everything seems to be going against you, remember that the airplane takes off against the wind, not with it." - Henry Ford</li>
 
-	Fish : NOT COMPLETE
-	Toys : NOT COMPLETE
-	Rocks : COMPLETE
-	Boxes : NOT COMPLETE
-	Tesla Model 3 : NOT COMPLETE
+	<li>"The future belongs to those who believe in the beauty of their dreams." - Eleanor Roosevelt</li>
 
-Places I want to Visit Someday
+	<li>"All emotions are pure which gather you and lift you up; that emotion is impure which seizes only one side of your being and so distorts you." - Rainer Maria Rilke</li>
 
-	Egypt : NOT COMPLETE
-	New Zealand : COMPLETE
-	Sumatra : COMPLETE
-	The Moon : NOT COMPLETE
-
-Workout Plan
-
-	800 Arm-Curls : COMPLETE
-	Contortion : COMPLETE
-	Dunk a Basketball on a Regulation Hoop : NOT COMPLETE
-	100 Meter Swim : COMPLETE
-
-Favorite Quotes
-
-	"When everything seems to be going against you, remember that the airplane takes off against the wind, not with it." - Henry Ford
-
-	"The future belongs to those who believe in the beauty of their dreams." - Eleanor Roosevelt
-
-	"All emotions are pure which gather you and lift you up; that emotion is impure which seizes only one side of your being and so distorts you." - Rainer Maria Rilke
-
-	"There is no time for cut-and-dried monotony. There is time for work. And time for love. That leaves no other time!" - Coco Chanel
-
+	<li>"There is no time for cut-and-dried monotony. There is time for work. And time for love. That leaves no other time!" - Coco Chanel</li>
+</ul>
+</div>
 Copyright 2016
 
 </body>
